rendered/envs/demo/keycloak/deployment-keycloak-operator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    app.quarkus.io/build-timestamp: 2025-02-18 - 15:18:03 +0000
    app.quarkus.io/quarkus-version: 3.15.3
    app.quarkus.io/vcs-uri: https://github.com/keycloak/keycloak.git
    reloader.stakater.com/auto: "true"
  labels:
    app.kubernetes.io/managed-by: quarkus
    app.kubernetes.io/name: keycloak-operator
    app.kubernetes.io/version: 26.1.2
  name: keycloak-operator
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: keycloak-operator
  template:
    metadata:
      annotations:
        app.quarkus.io/build-timestamp: 2025-02-18 - 15:18:03 +0000
        app.quarkus.io/quarkus-version: 3.15.3
        app.quarkus.io/vcs-uri: https://github.com/keycloak/keycloak.git
      labels:
        app.kubernetes.io/managed-by: quarkus
        app.kubernetes.io/name: keycloak-operator
        app.kubernetes.io/version: 26.1.2
    spec:
      containers:
        - env:
            - name: KUBERNETES_NAMESPACE
              valueFrom:
                fieldRef:
                  fieldPath: metadata.namespace
            - name: RELATED_IMAGE_KEYCLOAK
              value: quay.io/keycloak/keycloak:26.1.2
          image: quay.io/keycloak/keycloak-operator:26.1.2
          imagePullPolicy: Always
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/live
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          name: keycloak-operator
          ports:
            - containerPort: 8080
              name: http
              protocol: TCP
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/ready
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
          resources:
            limits:
              cpu: 700m
              memory: 450Mi
            requests:
              cpu: 300m
              memory: 450Mi
          startupProbe:
            failureThreshold: 3
            httpGet:
              path: /q/health/started
              port: 8080
              scheme: HTTP
            initialDelaySeconds: 5
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 10
      serviceAccountName: keycloak-operator
