rendered/envs/demo/keycloak/ingressroute-keycloak.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  annotations:
    a8r.io/repository: https://github.com/kbudde/k8s-demo
    external-dns.alpha.kubernetes.io/target: lb.demo.budd.ee
    kubernetes.io/ingress.class: traefik
  name: keycloak
spec:
  entryPoints:
    - websecure
    - websecure-http3
  routes:
    - kind: Rule
      match: Host(`auth.demo.budd.ee`)
      priority: 10
      services:
        - name: keycloak-service
          passHostHeader: true
          port: 8080
    - kind: Rule
      match: Host(`keycloak.demo.budd.ee`)
      priority: 10
      services:
        - name: keycloak-service
          passHostHeader: true
          port: 8080
